<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:padding="5dp">

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/item_name"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:layout_weight="25"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/num"
            android:textSize="16sp"
            android:layout_margin="5dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:layout_weight="25"
            android:textStyle="bold"
            android:text="@string/monies"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:layout_weight="25"
            android:textAlignment="center"
            android:text="@string/total_list"
            android:textSize="16sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="5dp">
        <ListView
            android:id="@+id/cart_LV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">
        </ListView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_weight="0.01"
        android:orientation="vertical">
        <Button
            android:id="@+id/clear_BTN_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/grey_200"
            android:layout_gravity="end"
            android:text="@string/clear"
            android:layout_margin="8dp"
            android:textColor="#EEFF41"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/total_TV_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/grey_200"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/total"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>