<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="419dp"
        android:layout_height="245dp"
        android:layout_gravity="top"
        app:srcCompat="@drawable/food_test"
        tools:layout_editor_absoluteY="32dp" />



    <TextView
        android:id="@+id/title_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#DED103"
        android:textSize="34sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="296dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/description"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="341dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingVertical="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/description_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="372dp" />

        <TextView
            android:id="@+id/price_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginHorizontal="20dp"
            android:text="TextView"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="276dp"
            tools:layout_editor_absoluteY="372dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="right"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_marginHorizontal="10dp"
            tools:layout_editor_absoluteX="201dp"
            tools:layout_editor_absoluteY="426dp" />
        <EditText
            android:id="@+id/quantity_ET"
            android:layout_width="128dp"
            android:layout_height="43dp"
            android:ems="10"
            android:layout_marginHorizontal="40dp"
            android:inputType="number"
            tools:layout_editor_absoluteX="277dp"
            tools:layout_editor_absoluteY="414dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:layout_gravity="bottom">
        <Button
            android:id="@+id/addToCart_BT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="end"
            android:text="@string/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="522dp" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
